--- a/HotellAdmin/FormHotellAdmin.resx
+++ b/HotellAdmin/FormHotellAdmin.resx
@@ -270,4 +270,7 @@
         EREREYUlBloiIiIiIiIKQ1Hy/7o9+HZle6OBAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="tooltipDatabaseMode.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
